# MusicPlayer

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  Application.mk  CAudioFilter.cpp  CAudioFilter.h  CBufferStream.cpp  CBufferStream.h  CDecoder.cpp  CDecoder.h  CFilterState.cpp  CFilterState.h  CFrame.cpp  CFrame.h  CMakeLists.txt  CMediaContext.cpp  CMediaContext.h  CMediaPlayer.cpp  CMediaPlayer.h  CMediaStream.cpp  CMediaStream.h  CMediaTag.cpp  CMediaTag.h  CStream.cpp  CStream.h  ICallback.h  IErrorCallback.h  IObject.h  JNIDecoder.cpp  JNIDecoder.h  JNIFilterState.cpp  JNIFilterState.h  JNIHelper.h  JNIMediaPlayer.cpp  JNIMediaPlayer.h  JNIMediaTag.cpp  JNIMediaTag.h  config.h  log.h
app/src/main/jni/ffmpeg/: Android.mk  CMakeLists.txt
app/src/main/jni/ffmpeg/include/libavutil/: ffversion.h
app/src/main/jni/taglib/: Android.mk  CMakeLists.txt  audioproperties.h  fileref.h  tag.h  taglib_export.h
app/src/main/jni/taglib/ape/: apefile.h  apefooter.h  apeitem.h  apeproperties.h  apetag.h
app/src/main/jni/taglib/asf/: asfattribute.h  asffile.h  asfpicture.h  asfproperties.h  asftag.h
app/src/main/jni/taglib/flac/: flacfile.h  flacmetadatablock.h  flacpicture.h  flacproperties.h  flacunknownmetadatablock.h
app/src/main/jni/taglib/it/: itfile.h  itproperties.h
app/src/main/jni/taglib/mod/: modfile.h  modfilebase.h  modproperties.h  modtag.h
app/src/main/jni/taglib/mp4/: mp4atom.h  mp4coverart.h  mp4file.h  mp4item.h  mp4properties.h  mp4tag.h
app/src/main/jni/taglib/mpc/: mpcfile.h  mpcproperties.h
app/src/main/jni/taglib/mpeg/: mpegfile.h  mpegheader.h  mpegproperties.h  xingheader.h
app/src/main/jni/taglib/mpeg/id3v1/: id3v1genres.h  id3v1tag.h
app/src/main/jni/taglib/mpeg/id3v2/: id3v2extendedheader.h  id3v2footer.h  id3v2frame.h  id3v2framefactory.h  id3v2header.h  id3v2synchdata.h  id3v2tag.h
app/src/main/jni/taglib/mpeg/id3v2/frames/: attachedpictureframe.h  chapterframe.h  commentsframe.h  eventtimingcodesframe.h  generalencapsulatedobjectframe.h  ownershipframe.h  podcastframe.h  popularimeterframe.h  privateframe.h  relativevolumeframe.h  synchronizedlyricsframe.h  tableofcontentsframe.h  textidentificationframe.h  uniquefileidentifierframe.h  unknownframe.h  unsynchronizedlyricsframe.h  urllinkframe.h
app/src/main/jni/taglib/ogg/: oggfile.h  oggpage.h  oggpageheader.h  xiphcomment.h
app/src/main/jni/taglib/ogg/flac/: oggflacfile.h
app/src/main/jni/taglib/ogg/opus/: opusfile.h  opusproperties.h
app/src/main/jni/taglib/ogg/speex/: speexfile.h  speexproperties.h
app/src/main/jni/taglib/ogg/vorbis/: vorbisfile.h  vorbisproperties.h
app/src/main/jni/taglib/riff/: rifffile.h
app/src/main/jni/taglib/riff/aiff/: aifffile.h  aiffproperties.h
app/src/main/jni/taglib/riff/wav/: infotag.h  wavfile.h  wavproperties.h
app/src/main/jni/taglib/s3m/: s3mfile.h  s3mproperties.h
app/src/main/jni/taglib/toolkit/: taglib.h  tbytevector.h  tbytevectorlist.h  tbytevectorstream.h  tdebuglistener.h  tfile.h  tfilestream.cpp  tfilestream.h  tiostream.h  tpropertymap.h  trefcounter.h  tstring.h  tstringlist.h
app/src/main/jni/taglib/trueaudio/: trueaudiofile.h  trueaudioproperties.h
app/src/main/jni/taglib/wavpack/: wavpackfile.h  wavpackproperties.h
app/src/main/jni/taglib/xm/: xmfile.h  xmproperties.h
app/src/main/res/drawable/: background_bar_button.xml  background_bar_button_dark.xml  background_bar_button_highlight.xml  background_bar_button_highlight_dark.xml  background_dialog_item.xml  background_image_button.xml  background_item.xml  background_item_dark.xml  background_item_highlight.xml  background_item_highlight_dark.xml  border.xml  cover_gradient.xml  cover_gradient_dark.xml  eq_band_progress.xml  eq_band_progress_dark.xml  eq_band_thumb.xml  eq_band_thumb_dark.xml  foreground_cover.xml  foreground_options_button.xml
app/src/main/res/drawable-hdpi/: Thumbs.db
app/src/main/res/drawable-v21/: background_button.xml  background_image_button.xml  background_image_button_highlight.xml  background_item.xml  background_item_highlight_21.xml  foreground_cover.xml
app/src/main/res/drawable-xhdpi/: Thumbs.db
app/src/main/res/drawable-xxhdpi/: Thumbs.db
app/src/main/res/drawable-xxxhdpi/: Thumbs.db
app/src/main/res/layout/: actionbar_layout.xml  activity_equalizer.xml  activity_file_picker.xml  activity_intro.xml  activity_layout_editor.xml  arrow_image_view.xml  bar_large_item.xml  bar_small_item.xml  base_edit_tags_cover.xml  dialog_backup.xml  dialog_check_box.xml  dialog_choose_playlist.xml  dialog_delete.xml  dialog_edit_tags.xml  dialog_edit_tags_multi.xml  dialog_export_playlist.xml  dialog_number.xml  dialog_sleep_timer.xml  dialog_sorting.xml  dialog_sorting_entry.xml  dialog_text.xml  disc_header.xml  entry_artist.xml  entry_file.xml  entry_folder.xml  entry_genre.xml  entry_grid_album.xml  entry_ignore_folder.xml  entry_item.xml  entry_layout_editor.xml  entry_menu.xml  entry_playlist.xml  entry_preset.xml  entry_song.xml  entry_song_album.xml  entry_storage.xml  eq_extra_layout.xml  equalizer_extra_layout.xml  equalizer_layout.xml  fragment_album.xml  (+25 more)
app/src/main/res/layout-land/: activity_equalizer.xml  bar_small_item.xml  equalizer_extra_layout.xml  layout_player.xml  layout_player_small.xml
app/src/main/res/layout-sw600dp/: activity_equalizer.xml
app/src/main/res/menu/: actions_playlist.xml  bar_artist.xml  bar_folder.xml  bar_genre.xml  bar_playlist.xml  options_album.xml  options_artist.xml  options_base.xml  options_cover.xml  options_equalizer.xml  options_file_picker.xml  options_folder.xml  options_genre.xml  options_layout_editor.xml  options_playlist.xml  options_preset.xml  options_sleep_timer.xml  options_song.xml
app/src/main/res/raw/: eq_presets  licenses.html
app/src/main/res/values/: attrs.xml  colors.xml  dialog_strings.xml  dimens.xml  ids.xml  integers.xml  intro_strings.xml  option_strings.xml  (+4 more)
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-v21/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+134 files in other folders)
